added last action as readable format for contact

--- a/LocalIM.csproj
+++ b/LocalIM.csproj
@@ -71,6 +71,7 @@
       <DependentUpon>ChatWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Command\ShowChatCommand.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="MainViewModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
